# way_to_ai_engineer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  friend_python_mentor_prompt.md  pyproject.toml
.github/workflows/: ci.yml
.mentor/: profile.md  progress.md  review-log.md
stage1_idiomatic_python/unit_1_1_decorators/: README.md  decorators.py  test_decorators.py
stage1_idiomatic_python/unit_1_2_generators/: README.md  generators.py  test_generators.py
stage1_idiomatic_python/unit_1_3_async/: README.md  async_basics.py  test_async_basic.py
stage1_idiomatic_python/unit_1_4_type_hints/: README.md  type_hints.py
stage1_idiomatic_python/unit_1_5_context_managers/: README.md  context_managers.py  test_context_managers.py
stage1_idiomatic_python/unit_1_6_comprehensions/: README.md  comprehensions.py  test_comprehensions.py
stage1_idiomatic_python/unit_1_7_packaging_testing/: example.py
stage2_llm_engineering/: README.md
stage3_rag_from_scratch/: README.md
stage4_agents/: README.md
stage5_productionization/: README.md
