[project]
name = "way-to-ai-engineer"
version = "0.1.0"
description = "Structured Python mentorship — RAG, Function Calling, and Agents from scratch"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.12"
strict = true
